--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "panini",
-  "version": "1.6.3",
+  "version": "1.6.4",
   "description": "A super tiny flat file compiler.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --compilers js:babel-register --reporter nyan"
+    "test": "mocha --require babel-register --reporter nyan"
   },
   "author": "ZURB <foundation@zurb.com> (http://zurb.com)",
   "license": "MIT",
@@ -14,16 +14,16 @@
   "dependencies": {
     "deepmerge": "^1.3.2",
     "front-matter": "^2.0.5",
-    "glob": "^7.0.0",
-    "handlebars": "^4.0.5",
+    "glob": "^7.1.4",
+    "handlebars": "^4.1.2",
     "highlight.js": "^8.9.1",
-    "js-yaml": "^3.5.2",
-    "marked": "^0.3.14",
+    "js-yaml": "^3.13.1",
+    "marked": "^0.7.0",
     "nopt": "^4.0.1",
     "slash": "^1.0.0",
     "strip-bom": "2.0.0",
     "through2": "^2.0.0",
-    "vinyl-fs": "^2.4.4"
+    "vinyl-fs": "^3.0.3"
   },
   "devDependencies": {
     "assert-dir-equal": "^1.0.1",
@@ -31,11 +31,11 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.4.3",
     "babel-runtime": "^6.3.19",
-    "coveralls": "^2.11.6",
-    "gulp": "^3.8.11",
-    "mocha": "^3.2.0",
+    "coveralls": "^3.0.5",
+    "gulp": "^4.0.2",
+    "mocha": "^6.2.0",
     "mocha-lcov-reporter": "^1.0.0",
-    "vinyl-fs": "^2.3.1"
+    "vinyl-fs": "^3.0.3"
   },
   "repository": {
     "type": "git",
